--- a/package.json
+++ b/package.json
@@ -1,16 +1,37 @@
 {
   "name": "svelte-theme-select",
   "version": "0.0.1",
+  "type": "module",
+  "keywords": [
+    "svelte",
+    "theme",
+    "mode",
+    "light",
+    "dark",
+    "prefers-color-scheme"
+  ],
+  "homepage": "https://captaincodeman.github.io/svelte-theme-select/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/captaincodeman/svelte-theme-select.git"
+  },
+  "author": {
+    "name": "Simon Green",
+    "email": "simon@captaincodeman.com",
+    "url": "https://www.captaincodeman.com/"
+  },
   "scripts": {
     "dev": "vite dev",
     "sync": "svelte-kit sync",
-    "build": "svelte-kit sync && svelte-package",
+    "build": "vite build",
+    "preview": "vite preview",
+    "package": "svelte-kit sync && svelte-package",
     "prepublishOnly": "echo 'Did you mean to publish `./package/`, instead of `./`?' && exit 1",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^1.0.0",
+    "@sveltejs/adapter-static": "^1.0.0",
     "@sveltejs/kit": "^1.0.0",
     "@sveltejs/package": "^1.0.0",
     "autoprefixer": "^10.4.7",
@@ -18,15 +39,14 @@
     "postcss-load-config": "^4.0.1",
     "svelte": "^3.54.0",
     "svelte-check": "^2.9.2",
-    "svelte-preprocess": "^4.10.7",
+    "svelte-preprocess": "^5.0.0",
     "tailwindcss": "^3.1.5",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "vite": "^4.0.2"
   },
-  "type": "module",
   "dependencies": {
-    "svelte-headlessui": "^0.0.8",
+    "svelte-headlessui": "^0.0.9",
     "svelte-transition": "^0.0.7"
   }
 }
