--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-theme-select",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "type": "module",
   "keywords": [
     "svelte",
@@ -26,27 +26,45 @@
     "sync": "svelte-kit sync",
     "build": "vite build",
     "preview": "vite preview",
-    "package": "svelte-kit sync && svelte-package",
-    "prepublishOnly": "echo 'Did you mean to publish `./package/`, instead of `./`?' && exit 1",
+    "package": "svelte-kit sync && svelte-package && publint",
+    "prepublishOnly": "npm run package",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "svelte": "./dist/index.js"
+    }
+  },
+  "files": [
+    "dist",
+    "!dist/**/*.test.*",
+    "!dist/**/*.spec.*"
+  ],
+  "svelte": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "peerDependencies": {
+    "svelte": "^3.54.0 || ^4.0.0"
+  },
   "devDependencies": {
-    "@sveltejs/adapter-static": "^1.0.0",
-    "@sveltejs/kit": "^1.0.1",
-    "@sveltejs/package": "^1.0.1",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.20",
+    "@sveltejs/adapter-static": "^2.0.2",
+    "@sveltejs/kit": "^1.20.0",
+    "@sveltejs/package": "^2.0.2",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
     "postcss-load-config": "^4.0.1",
-    "svelte": "^3.55.0",
-    "svelte-check": "^3.0.1",
-    "tailwindcss": "^3.2.4",
-    "tslib": "^2.4.1",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.3"
+    "publint": "^0.1.12",
+    "svelte": "^3.59.1",
+    "svelte-check": "^3.4.3",
+    "tailwindcss": "^3.3.2",
+    "tslib": "^2.5.2",
+    "typescript": "^5.0.4",
+    "vite": "^4.3.9"
   },
   "dependencies": {
-    "svelte-headlessui": "^0.0.11",
+    "esm-env": "^1.0.0",
+    "svelte-headlessui": "^0.0.15",
     "svelte-transition": "^0.0.7"
   }
 }
