--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "postcss": "^8.4.24",
     "postcss-load-config": "^4.0.1",
     "publint": "^0.1.12",
-    "svelte": "^3.59.1",
+    "svelte": "^4.0.0-next.0",
     "svelte-check": "^3.4.3",
     "tailwindcss": "^3.3.2",
     "tslib": "^2.5.2",
