--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-theme-select",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "type": "module",
   "keywords": [
     "svelte",
@@ -49,22 +49,22 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^2.0.2",
-    "@sveltejs/kit": "^1.20.0",
+    "@sveltejs/kit": "^1.20.4",
     "@sveltejs/package": "^2.0.2",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "postcss-load-config": "^4.0.1",
     "publint": "^0.1.12",
-    "svelte": "^4.0.0-next.0",
-    "svelte-check": "^3.4.3",
+    "svelte": "^4.0.0",
+    "svelte-check": "^3.4.4",
     "tailwindcss": "^3.3.2",
-    "tslib": "^2.5.2",
-    "typescript": "^5.0.4",
+    "tslib": "^2.5.3",
+    "typescript": "^5.1.3",
     "vite": "^4.3.9"
   },
   "dependencies": {
     "esm-env": "^1.0.0",
-    "svelte-headlessui": "^0.0.15",
-    "svelte-transition": "^0.0.7"
+    "svelte-headlessui": "^0.0.17",
+    "svelte-transition": "^0.0.10"
   }
 }
